terraform/network-policies/_default-deny.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "default-deny"
spec:
  description: "Enable policy enforcement on all endpoints with no allowed traffic by default"
  endpointSelector: {}
  ingress: []
  egress: []
