terraform/network-policies/argocd.yaml
# yamllint disable rule:line-length
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "argocd"
spec:
  description: "Restrict Argo CD traffic to Traefik ingress, internal Argo CD communication, Kubernetes API, and external HTTPS."
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: argocd
      app.kubernetes.io/part-of: argocd

  ingress:
    # Allow Argo CD UI access from Traefik
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            k8s:io.kubernetes.pod.namespace: edge-gateway
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    # Allow intercommunication between Argo CD pods
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: argocd
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
            - port: "8081"
              protocol: TCP

  egress:
    # Allow to kube-apiserver
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP

    # Allow intercommunication between Argo CD pods
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: argocd
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
            - port: "8081"
              protocol: TCP

    # Allow outgoing HTTPS to host
    - toEntities: [host]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    # Allow outgoing HTTPS to world (internet)
    - toEntities: [world]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
