terraform/network-policies/cert-manager-startupapicheck.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cert-manager-startupapicheck"
  namespace: pki
spec:
  description: "Allow cert-manager startupapicheck to connect to Kubernetes API"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: startupapicheck

  ingress: []

  egress:
    # Allow connections to Kubernetes API
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
