terraform/network-policies/coredns-egress.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "coredns-pods-egress"
spec:
  description: "CoreDNS egress policy"
  endpointSelector: {}

  ingress: []

  egress:
    # Allow pods to reach CoreDNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            app.kubernetes.io/name: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
