terraform/network-policies/coredns-ingress.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "coredns-pods-ingress"
spec:
  description: "CoreDNS ingress policy"
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      app.kubernetes.io/name: coredns

  ingress:
    # Allow requests from all pods
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP

    # Allow metrics scrapes from Prometheus
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9153"
              protocol: TCP

    # Allow requests from remote nodes
    - fromEntities: [remote-node]
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP

  egress: []
