terraform/network-policies/coredns-upstream.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "coredns-upstream"
spec:
  description: "CoreDNS egress policy for upstream services."
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      app.kubernetes.io/name: coredns

  ingress: []

  egress:
    # Allow access to upstream DNS servers
    - toCIDR:
        - 192.168.14.1/32
        - fd12:3456:789a:14::1/128
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP

    # Allow access to Kubernetes API
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
