terraform/network-policies/hubble-relay.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "hubble-relay"
spec:
  description: "Hubble Relay network policy."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
      k8s:io.kubernetes.pod.namespace: kube-system

  ingress:
    # Allow connections from Hubble UI
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-ui
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "4245"
              protocol: TCP

  egress:
    # Allow connections to cluster components
    - toEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
