terraform/network-policies/hubble-ui.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "hubble-ui"
spec:
  description: "Hubble UI network policy."
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
      k8s:io.kubernetes.pod.namespace: kube-system

  ingress:
    # Allow connections from Traefik
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            k8s:io.kubernetes.pod.namespace: edge-gateway
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP

  egress:
    # Allow connections to Hubble Relay
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-relay
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
            - port: "80"
              protocol: TCP

    # Allow connections to Kubernetes API
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
