terraform/network-policies/icmp.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "icmp"
spec:
  description: "Policy to allow select ICMP traffic globally"
  endpointSelector: {}

  ingress:
    # Allow selected ICMP types
    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
            - type: EchoReply
              family: IPv4
            - type: DestinationUnreachable
              family: IPv4
            - type: TimeExceeded
              family: IPv4
            - type: ParameterProblem
              family: IPv4
            - type: Redirect
              family: IPv4
            - type: EchoRequest
              family: IPv6
            - type: DestinationUnreachable
              family: IPv6
            - type: TimeExceeded
              family: IPv6
            - type: ParameterProblem
              family: IPv6
            - type: RedirectMessage
              family: IPv6
            - type: PacketTooBig
              family: IPv6
            - type: MulticastListenerQuery
              family: IPv6
            - type: MulticastListenerReport
              family: IPv6

  egress:
    # Allow selected ICMP types
    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
            - type: EchoReply
              family: IPv4
            - type: DestinationUnreachable
              family: IPv4
            - type: TimeExceeded
              family: IPv4
            - type: ParameterProblem
              family: IPv4
            - type: Redirect
              family: IPv4
            - type: EchoRequest
              family: IPv6
            - type: EchoReply
              family: IPv6
            - type: DestinationUnreachable
              family: IPv6
            - type: TimeExceeded
              family: IPv6
            - type: ParameterProblem
              family: IPv6
            - type: RedirectMessage
              family: IPv6
            - type: PacketTooBig
              family: IPv6
            - type: MulticastListenerQuery
              family: IPv6
            - type: MulticastListenerReport
              family: IPv6
