terraform/network-policies/longhorn.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "longhorn-policy"
spec:
  description: "Allow required Longhorn communication"
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: longhorn-system
  ingress:
    # Allow from other Longhorn pods (internal communication)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
    # Allow from host (node) for management
    - fromEntities: [host]
  egress:
    # Allow to other Longhorn pods
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
    # Allow to host (for API, NFS, etc)
    - toEntities: [host]
    # Allow to kube-apiserver
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
