terraform/network-policies/metrics-server.yaml
# yamllint disable rule:line-length
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "metrics-server"
  namespace: kube-system
spec:
  description: "Allow metrics-server ingress and egress for kubelet and API access"
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s-app: metrics-server

  ingress:
    # Allow connections from cluster components
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP

  egress:
    # Allow connections to cluster components
    - toEntities:
        - host
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP

    # Allow connections to Kubernetes API
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
