terraform/network-policies/traefik.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: traefik
spec:
  description: "Allow Traefik ingress and egress traffic"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      k8s:io.kubernetes.pod.namespace: edge-gateway
  ingress:
    # Allow from remote-node (used by Kubelet to pulling images)
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

    # Allow from any pod in the cluster
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow from world (external)
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow Prometheus to scrape metrics
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
  egress:
    # Allow to all pods in the cluster
    - toEndpoints:
        - {}
    - toEntities:
        - world
    # Allow to kube-apiserver
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Allow Rook dashboard
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
